hphp/test/zend/good/Zend/tests/traits/bug60165b.php.expectf

Fatal error: Unknown trait method 'nonExistent' in %s/bug60165b.php on line 7
